adding react-rails and webpack to project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,7 @@
   </head>
 
   <body>
+    <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
     <%= yield %>
-
-    Is this showing up?
   </body>
 </html>
